--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,16 +4,20 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>vtiger.ContactTests.createContactwithOrganisation</td>
+<td>vtiger.OrganisationTests.CreateOrganisationwithIndustryTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createContactwithOrgTest</td>
-<td>SmokeSuite </td>
+<td>createOrgwithIndustryTest</td>
+<td>RegressionSuite </td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>demo</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
