--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>SmokeSuite</td><td>createContactwithOrganisation.createContactwithOrgTest()[pri:0, instance:vtiger.ContactTests.createContactwithOrganisation@8458f04]<br/>createContactwithOrganisation.createContactwithOrgTest()[pri:0, instance:vtiger.ContactTests.createContactwithOrganisation@19932c16]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>RegressionSuite</td><td>CreateOrganisationwithIndustryTest.createOrgwithIndustryTest()[pri:0, instance:vtiger.OrganisationTests.CreateOrganisationwithIndustryTest@5386659f]<br/></td></tr>
 </table>
