--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,28 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="df9b86">  <td>23/08/31 15:10:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:vtiger.ContactTests.createContactwithOrganisation@8458f04]">&lt;&lt;acConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1197251633</td>   <td></td> </tr>
-<tr bgcolor="df9b86">  <td>23/08/31 15:10:43</td>   <td>3419</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:vtiger.ContactTests.createContactwithOrganisation@19932c16]">&lt;&lt;acConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1383519982</td>   <td></td> </tr>
-<tr bgcolor="df9b86">  <td>23/08/31 15:10:36</td>   <td>-3658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.ContactTests.createContactwithOrganisation@8458f04]">&lt;&lt;amConfig</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1197251633</td>   <td></td> </tr>
-<tr bgcolor="df9b86">  <td>23/08/31 15:10:40</td>   <td>435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.ContactTests.createContactwithOrganisation@19932c16]">&lt;&lt;amConfig</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1383519982</td>   <td></td> </tr>
-<tr bgcolor="df9b86">  <td>23/08/31 15:10:44</td>   <td>4842</td> <td title="&lt;&lt;BaseClass.asconfig()[pri:0, instance:vtiger.ContactTests.createContactwithOrganisation@19932c16]">&lt;&lt;asconfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1222768327</td>   <td></td> </tr>
-<tr bgcolor="df9b86">  <td>23/08/31 15:09:39</td>   <td>-60547</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig(java.lang.String)[pri:0, instance:vtiger.ContactTests.createContactwithOrganisation@8458f04]">&gt;&gt;bcConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1197251633</td>   <td></td> </tr>
-<tr bgcolor="df9b86">  <td>23/08/31 15:09:39</td>   <td>-60547</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig(java.lang.String)[pri:0, instance:vtiger.ContactTests.createContactwithOrganisation@19932c16]">&gt;&gt;bcConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1383519982</td>   <td></td> </tr>
-<tr bgcolor="df9b86">  <td>23/08/31 15:09:48</td>   <td>-51385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.ContactTests.createContactwithOrganisation@8458f04]">&gt;&gt;bmConfig</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1197251633</td>   <td></td> </tr>
-<tr bgcolor="df9b86">  <td>23/08/31 15:09:45</td>   <td>-54326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.ContactTests.createContactwithOrganisation@19932c16]">&gt;&gt;bmConfig</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1383519982</td>   <td></td> </tr>
-<tr bgcolor="df9b86">  <td>23/08/31 15:09:39</td>   <td>-60627</td> <td title="&gt;&gt;BaseClass.bsconfig()[pri:0, instance:vtiger.ContactTests.createContactwithOrganisation@19932c16]">&gt;&gt;bsconfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1222768327</td>   <td></td> </tr>
-<tr bgcolor="af606c">  <td>23/08/31 15:09:54</td>   <td>-46015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="createContactwithOrganisation.createContactwithOrgTest()[pri:0, instance:vtiger.ContactTests.createContactwithOrganisation@8458f04]">createContactwithOrgTest</td> 
-  <td>TestNG-tests-1@1197251633</td>   <td></td> </tr>
-<tr bgcolor="af606c">  <td>23/08/31 15:09:51</td>   <td>-48625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="createContactwithOrganisation.createContactwithOrgTest()[pri:0, instance:vtiger.ContactTests.createContactwithOrganisation@19932c16]">createContactwithOrgTest</td> 
-  <td>TestNG-tests-2@1383519982</td>   <td></td> </tr>
+<tr bgcolor="bc828d">  <td>23/09/15 15:14:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:vtiger.OrganisationTests.CreateOrganisationwithIndustryTest@5386659f]">&lt;&lt;acConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@352083716</td>   <td></td> </tr>
+<tr bgcolor="bc828d">  <td>23/09/15 15:14:06</td>   <td>-1306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.OrganisationTests.CreateOrganisationwithIndustryTest@5386659f]">&lt;&lt;amConfig</td> 
+<td>&nbsp;</td>  <td>main@352083716</td>   <td></td> </tr>
+<tr bgcolor="bc828d">  <td>23/09/15 15:14:08</td>   <td>269</td> <td title="&lt;&lt;BaseClass.asconfig()[pri:0, instance:vtiger.OrganisationTests.CreateOrganisationwithIndustryTest@5386659f]">&lt;&lt;asconfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@352083716</td>   <td></td> </tr>
+<tr bgcolor="bc828d">  <td>23/09/15 15:13:50</td>   <td>-17414</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig()[pri:0, instance:vtiger.OrganisationTests.CreateOrganisationwithIndustryTest@5386659f]">&gt;&gt;bcConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@352083716</td>   <td></td> </tr>
+<tr bgcolor="bc828d">  <td>23/09/15 15:13:55</td>   <td>-12444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.OrganisationTests.CreateOrganisationwithIndustryTest@5386659f]">&gt;&gt;bmConfig</td> 
+<td>&nbsp;</td>  <td>main@352083716</td>   <td></td> </tr>
+<tr bgcolor="bc828d">  <td>23/09/15 15:13:50</td>   <td>-17443</td> <td title="&gt;&gt;BaseClass.bsconfig()[pri:0, instance:vtiger.OrganisationTests.CreateOrganisationwithIndustryTest@5386659f]">&gt;&gt;bsconfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@352083716</td>   <td></td> </tr>
+<tr bgcolor="b1b49b">  <td>23/09/15 15:13:58</td>   <td>-9864</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrganisationwithIndustryTest.createOrgwithIndustryTest()[pri:0, instance:vtiger.OrganisationTests.CreateOrganisationwithIndustryTest@5386659f]">createOrgwithIndustryTest</td> 
+  <td>main@352083716</td>   <td></td> </tr>
 </table>
